# task-queue-docker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-lint.txt  requirements.txt  tox.ini
.github/workflows/: linters  linters.yml
docker/: docker-compose.yml  worker.dockerfile
docker_task_queue/client/: .dtq.ini  config.py  test.py
docker_task_queue/common/: rabbitmq_logger.py  settings.py  tasks.py
docker_task_queue/server/fastapi/: main.py
docker_task_queue/server/fastapi/templates/: log.html  logs-list.html
docker_task_queue/worker/: app.py
src/client/: test.py  test2.py
src/common/: rabbitmq_logger.py  tasks.py
src/server/fastapi/: main.py
src/worker/: app.py  rabbitmq_logger.py  settings.py
tests/client/: test_config.py
tests/common/: test_rabbitmq_logger.py
